--- a/lightdm-opti-greeter.desktop
+++ b/lightdm-opti-greeter.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
 Name=Optinomics Greeter
 Comment=Optinomics Greeter
-Exec=/bin/opti_greeter.py
+Exec=/usr/local/bin/opti_greeter.py
 Type=Application
