--- a/lightdm.conf
+++ b/lightdm.conf
@@ -111,7 +111,7 @@ greeter-session=lightdm-opti-greeter
 #greeter-allow-guest=true
 #greeter-show-manual-login=false
 #greeter-show-remote-login=true
-#user-session = xfce
+user-session = startxfce4
 #allow-user-switching=true
 #allow-guest=true
 #guest-session=
@@ -144,8 +144,6 @@ session-wrapper=/etc/lightdm/Xsession
 #
 [XDMCPServer]
 enabled=true
-
-
 
 #port=177
 #listen-address=
