--- a/lightdm.conf
+++ b/lightdm.conf
@@ -105,13 +105,13 @@ run-directory=/run/lightdm
 #xdmcp-key=
 #unity-compositor-command=unity-system-compositor
 #unity-compositor-timeout=60
-#greeter-session=lightdm-opti-greeter
-greeter-session=lightdm-gtk-greeter
+greeter-session=lightdm-opti-greeter
+#greeter-session=lightdm-gtk-greeter
 #greeter-hide-users=false
 #greeter-allow-guest=true
 #greeter-show-manual-login=false
 #greeter-show-remote-login=true
-#user-session = startxfce4
+user-session = startxfce4
 #allow-user-switching=true
 #allow-guest=true
 #guest-session=
